# pvr.vdr.vnsi

./: .gitignore  .travis.yml  CMakeLists.txt  FindEMBEDDED.cmake  FindOpenGLES2.cmake  README.md  azure-pipelines.yml
.github/workflows/: build.yml  increment-version.yml  sync-addon-metadata-translations.yml
debian/: changelog  changelog.in  control  copyright  kodi-pvr-vdr-vnsi.install  rules
pvr.vdr.vnsi/: addon.xml  addon.xml.in  changelog.txt
pvr.vdr.vnsi/resources/: settings.xml
pvr.vdr.vnsi/resources/language/English/: strings.po
pvr.vdr.vnsi/resources/language/resource.language.af_za/: strings.po
pvr.vdr.vnsi/resources/language/resource.language.am_et/: strings.po
pvr.vdr.vnsi/resources/language/resource.language.ar_sa/: strings.po
pvr.vdr.vnsi/resources/language/resource.language.ast_es/: strings.po
pvr.vdr.vnsi/resources/language/resource.language.az_az/: strings.po
pvr.vdr.vnsi/resources/language/resource.language.be_by/: strings.po
pvr.vdr.vnsi/resources/language/resource.language.bg_bg/: strings.po
pvr.vdr.vnsi/resources/language/resource.language.bs_ba/: strings.po
pvr.vdr.vnsi/resources/language/resource.language.ca_es/: strings.po
pvr.vdr.vnsi/resources/language/resource.language.cs_cz/: strings.po
pvr.vdr.vnsi/resources/language/resource.language.cy_gb/: strings.po
pvr.vdr.vnsi/resources/language/resource.language.da_dk/: strings.po
pvr.vdr.vnsi/resources/language/resource.language.de_de/: strings.po
pvr.vdr.vnsi/resources/language/resource.language.el_gr/: strings.po
pvr.vdr.vnsi/resources/language/resource.language.en_au/: strings.po
pvr.vdr.vnsi/resources/language/resource.language.en_gb/: strings.po
pvr.vdr.vnsi/resources/language/resource.language.en_nz/: strings.po
pvr.vdr.vnsi/resources/language/resource.language.en_us/: strings.po
pvr.vdr.vnsi/resources/language/resource.language.eo/: strings.po
pvr.vdr.vnsi/resources/language/resource.language.es_ar/: strings.po
pvr.vdr.vnsi/resources/language/resource.language.es_es/: strings.po
pvr.vdr.vnsi/resources/language/resource.language.es_mx/: strings.po
pvr.vdr.vnsi/resources/language/resource.language.et_ee/: strings.po
pvr.vdr.vnsi/resources/language/resource.language.eu_es/: strings.po
pvr.vdr.vnsi/resources/language/resource.language.fa_af/: strings.po
pvr.vdr.vnsi/resources/language/resource.language.fa_ir/: strings.po
pvr.vdr.vnsi/resources/language/resource.language.fi_fi/: strings.po
pvr.vdr.vnsi/resources/language/resource.language.fo_fo/: strings.po
pvr.vdr.vnsi/resources/language/resource.language.fr_ca/: strings.po
pvr.vdr.vnsi/resources/language/resource.language.fr_fr/: strings.po
pvr.vdr.vnsi/resources/language/resource.language.gl_es/: strings.po
pvr.vdr.vnsi/resources/language/resource.language.he_il/: strings.po
pvr.vdr.vnsi/resources/language/resource.language.hi_in/: strings.po
pvr.vdr.vnsi/resources/language/resource.language.hr_hr/: strings.po
pvr.vdr.vnsi/resources/language/resource.language.hu_hu/: strings.po
pvr.vdr.vnsi/resources/language/resource.language.hy_am/: strings.po
pvr.vdr.vnsi/resources/language/resource.language.id_id/: strings.po
pvr.vdr.vnsi/resources/language/resource.language.is_is/: strings.po
pvr.vdr.vnsi/resources/language/resource.language.it_it/: strings.po
pvr.vdr.vnsi/resources/language/resource.language.ja_jp/: strings.po
pvr.vdr.vnsi/resources/language/resource.language.ko_kr/: strings.po
pvr.vdr.vnsi/resources/language/resource.language.lt_lt/: strings.po
pvr.vdr.vnsi/resources/language/resource.language.lv_lv/: strings.po
pvr.vdr.vnsi/resources/language/resource.language.mi/: strings.po
pvr.vdr.vnsi/resources/language/resource.language.mk_mk/: strings.po
pvr.vdr.vnsi/resources/language/resource.language.ml_in/: strings.po
pvr.vdr.vnsi/resources/language/resource.language.mn_mn/: strings.po
pvr.vdr.vnsi/resources/language/resource.language.ms_my/: strings.po
pvr.vdr.vnsi/resources/language/resource.language.mt_mt/: strings.po
pvr.vdr.vnsi/resources/language/resource.language.my_mm/: strings.po
pvr.vdr.vnsi/resources/language/resource.language.nb_no/: strings.po
pvr.vdr.vnsi/resources/language/resource.language.nl_nl/: strings.po
pvr.vdr.vnsi/resources/language/resource.language.pl_pl/: strings.po
pvr.vdr.vnsi/resources/language/resource.language.pt_br/: strings.po
pvr.vdr.vnsi/resources/language/resource.language.pt_pt/: strings.po
pvr.vdr.vnsi/resources/language/resource.language.ro_ro/: strings.po
pvr.vdr.vnsi/resources/language/resource.language.ru_ru/: strings.po
pvr.vdr.vnsi/resources/language/resource.language.si_lk/: strings.po
pvr.vdr.vnsi/resources/language/resource.language.sk_sk/: strings.po
pvr.vdr.vnsi/resources/language/resource.language.sl_si/: strings.po
pvr.vdr.vnsi/resources/language/resource.language.sq_al/: strings.po
pvr.vdr.vnsi/resources/language/resource.language.sr_rs/: strings.po
pvr.vdr.vnsi/resources/language/resource.language.sr_rs@latin/: strings.po
pvr.vdr.vnsi/resources/language/resource.language.sv_se/: strings.po
pvr.vdr.vnsi/resources/language/resource.language.szl/: strings.po
pvr.vdr.vnsi/resources/language/resource.language.ta_in/: strings.po
pvr.vdr.vnsi/resources/language/resource.language.te_in/: strings.po
src/: Addon.cpp  Addon.h  Channels.cpp  Channels.h  ClientInstance.cpp  ClientInstance.h  GUIWindowAdmin.cpp  GUIWindowAdmin.h  GUIWindowChannelScan.cpp  GUIWindowChannelScan.h  InputstreamDemux.cpp  InputstreamDemux.h  InputstreamRecording.cpp  InputstreamRecording.h  RequestPacket.cpp  RequestPacket.h  ResponsePacket.cpp  ResponsePacket.h  Session.cpp  Session.h  Settings.cpp  Settings.h  Socket.cpp  Socket.h  TCPSocket.cpp  TCPSocket.h  Tools.cpp  Tools.h  VNSIAdmin.cpp  VNSIAdmin.h  VNSIChannelScan.cpp  VNSIChannelScan.h  VNSIChannels.cpp  VNSIChannels.h  VNSIData.cpp  VNSIData.h  VNSIDemux.cpp  VNSIDemux.h  VNSIRecording.cpp  VNSIRecording.h  (+12 more)
src/EGLHelpers/: VisMatrixGLES.cpp
src/shaders/: GUIShader.cpp  GUIShader.h  Matrix.cpp  Matrix.h  Shader.cpp  Shader.h
(+13 files in other folders)
